Fixed rounded corners on small screens

--- a/ai/static/ai/css/chatstyle.css
+++ b/ai/static/ai/css/chatstyle.css
@@ -17,10 +17,20 @@ body {
   padding-left: 2px;
   padding-right: 2px;
 }
+@media (max-width: 992px) {
+  .top-panel {
+    border-radius: 0;
+  }
+}
 #data-container {
   height: 100vh;
   padding-bottom: 50px;
   padding-top: 50px;
+}
+@media (max-width: 992px) {
+  #data-container {
+    padding: 0;
+  }
 }
 #left-pane-heading {
   border-bottom: 5px;
@@ -74,7 +84,7 @@ body {
 }
 @media (max-width: 992px) {
   #left-pane {
-    border-radius: 0 0 8px 8px;
+    border-radius: 0;
   }
 }
 #right-pane {
